# rust-wasm-test

./: Cargo.toml  index.html
src/: lib.rs
